--- a/src/scss/sections/_first-screen.scss
+++ b/src/scss/sections/_first-screen.scss
@@ -14,6 +14,7 @@
 
   @media (max-width: 1220px) {
     background-image: url("../img/bg/first-screen--home-1200.jpg");
+    padding-bottom: 60px;
   }
 
   @media (max-width: 768px) {
@@ -67,7 +68,7 @@
     font-weight: 500;
     text-transform: none;
   }
-   &__subtitle {
+  &__subtitle {
     font-weight: 300;
     font-size: 42px;
     line-height: 110%;
@@ -100,6 +101,7 @@
     @media (max-width: 1220px) {
       grid-template-columns: 1fr;
       gap: 30px;
+      margin-bottom: 70px;
     }
   }
   &__item {
@@ -176,6 +178,16 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    /* Для главной страницы */
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin-bottom: -200px;
+
+    @media (max-width: 1200px) {
+      position: relative;
+      margin-bottom: 0;
+    }
 
     @media (max-width: 900px) {
       flex-direction: column;
@@ -220,17 +232,17 @@
     background-image: url("../img/bg/first-screen--lp.jpg");
 
     @media (max-width: 1220px) {
-    background-image: url("../img/bg/first-screen--lp-1200.jpg");
-  }
+      background-image: url("../img/bg/first-screen--lp-1200.jpg");
+    }
 
-  @media (max-width: 768px) {
-    background-image: url("../img/bg/first-screen--lp-768.jpg");
-    background-position: right center;
-  }
+    @media (max-width: 768px) {
+      background-image: url("../img/bg/first-screen--lp-768.jpg");
+      background-position: right center;
+    }
 
-  @media (max-width: 320px) {
-    background-image: url("../img/bg/first-screen--lp-320.jpg");
-  }
+    @media (max-width: 320px) {
+      background-image: url("../img/bg/first-screen--lp-320.jpg");
+    }
 
     & .wrapper {
       display: grid;
