--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -175,10 +175,9 @@
   }
 
   &__status-icon {
-    width: 30px;
+    width: 25px;
+    height: 25px;
     margin-right: 10px;
-    margin-bottom: 10px;
-    fill: #ffffff;
 
     @media (max-width: 1130px) {
       margin-bottom: 0;
@@ -188,7 +187,15 @@
   &__status-label {
     font-size: 14px;
     line-height: 120%;
-    flex-grow: 2;
+    max-width: 84px;
+
+    @media (max-width: 1100px) {
+      max-width: max-content;
+    }
+
+    @media (max-width: 900px) {
+      max-width: 84px;
+    }
 
     @media (max-width: 400px) {
       flex-grow: 1;
