--- a/src/scss/sections/_priority-project.scss
+++ b/src/scss/sections/_priority-project.scss
@@ -38,6 +38,7 @@
     column-gap: 90px;
     row-gap: 20px;
     margin-bottom: 90px;
+    align-items: center;
 
     @media (max-width: 1130px) {
       align-items: center;
@@ -177,7 +178,84 @@
       width: 90px;
     }
   }
+}
+
+/* слайдер */
+.priority-project {
   &__slider {
     margin-bottom: 80px;
+
+    & .wrapper {
+      max-width: 100%;
+      width: 100%;
+      padding: 0;
+    }
+
+    & .swiper-button-next,
+    & .swiper-button-prev {
+      color: #000000;
+      padding: 30px;
+      background: rgba(255, 255, 255, 0.8);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+
+      @media (max-width: 480px) {
+        display: none;
+      }
+    }
+
+    & .swiper-button-prev:after,
+    & .swiper-button-next:after {
+      font-size: 30px;
+      font-weight: 800;
+    }
+
+    & .swiper-container-horizontal > .swiper-pagination-bullets,
+    & .swiper-pagination-custom,
+    & .swiper-pagination-fraction {
+      bottom: -40px;
+    }
+
+    & .swiper-pagination-bullet-active {
+      background-color: #467637;
+    }
+
+    & .swiper-pagination-bullet {
+      width: 13px;
+      height: 13px;
+    }
+
+    & .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
+      margin: 0 6px;
+    }
+  }
+
+  & .swiper-container {
+    width: max-content;
+    max-width: 100%;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    overflow: inherit;
+  }
+
+  & .swiper-wrapper {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  & .swiper-slide {
+    background-color: transparent !important;
+  }
+
+  & .swiper-slide__link {
+    display: block;
+  }
+
+  & .swiper-slide__image {
+    width: 100%;
+    object-fit: cover;
+    display: block;
   }
 }
