--- a/src/scss/sections/_priority-project.scss
+++ b/src/scss/sections/_priority-project.scss
@@ -147,7 +147,7 @@
       width: 100%;
       height: 400px;
       margin: 0 auto;
-      margin-bottom: 125px;
+      margin-bottom: 75px;
     }
     @media (max-width: 750px) {
       height: 250px;
@@ -174,8 +174,39 @@
   &__icon {
     width: 111px;
     height: auto;
+
     @media (max-width: 950px) {
       width: 90px;
+    }
+  }
+
+  &__footer {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
+    z-index: 2;
+
+    @media (max-width: 900px) {
+      flex-direction: column;
+    }
+
+    & .button {
+      max-width: 170px;
+      width: 100%;
+      margin-bottom: 0;
+    }
+  }
+
+  &__text {
+    max-width: 550px;
+    margin: 0;
+    margin-left: 50px;
+
+    @media (max-width: 900px) {
+      margin-left: 0;
+      order: -1;
+      margin-bottom: 20px;
     }
   }
 }
