добавил скругления у некоторых блоков на странице

--- a/src/scss/blocks/_const-list.scss
+++ b/src/scss/blocks/_const-list.scss
@@ -19,6 +19,7 @@
     background-color: #ffffff;
     height: fit-content;
     position: relative;
+    border-radius: 32px 0;
 
     @media (max-width: 800px) {
       padding-left: 30px;
