--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -146,6 +146,7 @@
     position: absolute;
     right: 0;
     flex-wrap: wrap;
+    border-radius: 32px 0;
 
     &--work {
       background-color: #284a2e;
