--- a/src/scss/sections/_first-screen.scss
+++ b/src/scss/sections/_first-screen.scss
@@ -178,6 +178,7 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    border-radius: 32px 0;
     /* Для главной страницы */
     position: absolute;
     bottom: 0;
