--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -34,7 +34,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
 
-    @media (max-width: 320px) {
+  @media (max-width: 320px) {
     font-size: 14px;
   }
 }
@@ -64,7 +64,7 @@ input[type="radio"].visually-hidden {
   color: #000000;
   margin: 0;
   margin-bottom: 35px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   display: block;
 
   @media (max-width: 1220px) {
