Добавил последний блок на главной странице сайта

--- a/src/scss/blocks/_words-leader.scss
+++ b/src/scss/blocks/_words-leader.scss
@@ -163,6 +163,7 @@
     position: absolute;
     bottom: -27px;
     right: -95px;
+    border-radius: 32px 0;
 
     @media (max-width: 1200px) {
       position: relative;
