--- a/src/scss/blocks/_words-leader.scss
+++ b/src/scss/blocks/_words-leader.scss
@@ -164,6 +164,7 @@
     bottom: -27px;
     right: -95px;
     border-radius: 32px 0;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
     @media (max-width: 1200px) {
       position: relative;
