--- a/src/scss/sections/_profi-legal.scss
+++ b/src/scss/sections/_profi-legal.scss
@@ -57,6 +57,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     border-radius: 32px 0;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
     @media (max-width: 1098px) {
       grid-column: span 1;
