--- a/src/scss/blocks/_button.scss
+++ b/src/scss/blocks/_button.scss
@@ -33,7 +33,7 @@
 
   &:hover,
   &:focus,
-  &.active  {
+  &.active {
     background: #284a2e;
     border-color: #284a2e;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -52,7 +52,7 @@
 
   &:hover,
   &:focus,
-  &:active  {
+  &:active {
     color: #ffffff;
     background: #444444;
     border: 4px solid #444444;
@@ -65,3 +65,25 @@
   }
 }
 
+.button--play {
+  border: none;
+  background-color: transparent;
+  margin: auto;
+  z-index: 2;
+  position: relative;
+  padding: 0;
+  box-shadow: none;
+
+  & img {
+    width: 111px;
+    height: auto;
+  }
+
+  &:hover,
+  &:focus,
+  &.active {
+    background: none;
+    border-color: transparent;
+    box-shadow: none;
+  }
+}
