Доработал адаптив готовых блоков лендинга

--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -84,6 +84,10 @@
       padding: 20px;
       font-weight: 500;
     }
+
+    @media (max-width: 320px) {
+      font-size: 14px;
+    }
   }
 
   &__data {
