--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -3,6 +3,10 @@
   padding: 55px 0 100px;
   overflow: hidden;
 
+  @media (max-width: 1100px) {
+      padding-bottom: 0;
+    }
+
   & .wrapper {
     @media (max-width: 1100px) {
       padding: 0;
