--- a/src/scss/sections/_infrastructure.scss
+++ b/src/scss/sections/_infrastructure.scss
@@ -3,17 +3,9 @@
   padding-top: 60px;
   overflow: hidden;
 
-  /* @media (max-width: 1200px) {
-      display: none !important;
-    } */
-
   @media (max-width: 1040px) {
     padding-top: 50px;
   }
-
-  /* @media (max-width: 560px) {
-    display: none !important;
-  } */
 
   & .title {
     font-weight: 700;
@@ -30,7 +22,7 @@
     }
 
     @media (max-width: 650px) {
-      font-size: 2rem;
+      font-size: 24px;
       line-height: 120%;
     }
   }
@@ -168,13 +160,6 @@
     display: grid;
     gap: 20px;
     grid-template-columns: auto;
-
-    /* @media (max-width: 1040px) {
-      max-width: 50%;
-      margin-bottom: 35px;
-      display: flex;
-      flex-wrap: wrap;
-    } */
   }
 
   &__list--big {
@@ -194,17 +179,13 @@
       grid-column: span 1;
     }
 
-    /* & li {
-      margin-bottom: 30px;
-    } */
-
     & p {
       font-size: 14px;
     }
   }
 
   &__list--border {
-    border: 4px solid #3a4e33;
+    border: 4px solid #467637;
     box-sizing: border-box;
     padding: 25px 40px;
     margin: 0 auto;
@@ -212,14 +193,6 @@
     @media (max-width: 650px) {
       margin-left: 0;
     }
-
-    /* @media (max-width: 1040px) {
-      max-width: 50%;
-    }
-
-    @media (max-width: 522px) {
-      max-width: 100%;
-    } */
 
     & span {
       font-size: 18px;
@@ -242,10 +215,6 @@
     max-width: 40px;
     width: 100%;
     height: auto;
-
-    /* @media (max-width: 1040px) {
-      margin-right: 25px;
-    } */
   }
 
   &__wrapper {
@@ -312,38 +281,33 @@
 }
 
 /* стилизация скролл бара  */
-::-webkit-scrollbar-button {
-  background-image: url("");
-  background-repeat: no-repeat;
-  width: 10px;
-  height: 0px;
-}
+.infrastructure {
+  & ::-webkit-scrollbar-track {
+    background-color: #3a4e33;
+  }
 
-::-webkit-scrollbar-track {
-  background-color: #3a4e33;
-}
+  & ::-webkit-scrollbar-thumb {
+    border-radius: 15px;
+    background-color: #e89714bb;
+  }
 
-::-webkit-scrollbar-thumb {
-  border-radius: 15px;
-  background-color: #e89714bb;
-}
+  & ::-webkit-scrollbar-thumb:hover {
+    background-color: #56999f;
+  }
 
-::-webkit-scrollbar-thumb:hover {
-  background-color: #56999f;
-}
+  & ::-webkit-resizer {
+    background-image: url("");
+    background-repeat: no-repeat;
+    width: 10px;
+    height: 0px;
+  }
 
-::-webkit-resizer {
-  background-image: url("");
-  background-repeat: no-repeat;
-  width: 10px;
-  height: 0px;
-}
+  & ::-webkit-scrollbar {
+    width: 10px;
+  }
 
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 15px;
-  background-color: #e89714bb;
+  & ::-webkit-scrollbar-thumb {
+    border-radius: 15px;
+    background-color: #e89714bb;
+  }
 }
